--- a/railway-notification-service/railway-notification-service/src/main/resources/application.properties
+++ b/railway-notification-service/railway-notification-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=railway-notification-service
+
+server.port:8082
+eurek.client.service-url.defaultZone=http://localhost:8761/eureka
+# Database Configuration
+spring.datasource.username=root
+spring.datasource.password=8610260354
+spring.datasource.url=jdbc:mysql://localhost:3306/RAILWAY
+
+# Hibernate Configuration
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hiberante.ddl-auto=update
+spring.jpa.show-sql=true
